--- a/hobiji.html
+++ b/hobiji.html
@@ -15,7 +15,7 @@
 <ul class="slova">
     <li>Nogomet</li>
     <li>Planinarenje</li>
-    <li>Košarka</li>,
+    <li>Košarka</li>
     <li>Igranje igrica</li>
     </ul>
     <h3><a href="index.html">Povratak na početnu</a></h3>
